--- a/server/plugins/parsers/met_parser.py.dist
+++ b/server/plugins/parsers/met_parser.py.dist
@@ -63,8 +63,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLS = ['date_time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temp_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # OpenRVDAS style
-# RAW_COLS = ['date','time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temperature_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # SCS style
+# RAW_COLS = ['date_time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temp_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # OpenRVDAS style
+RAW_COLS = ['date','time','hdr','sensor_date','sensor_time','air_pres','barometer_sensor_height','barometer_quality','air_temp','temp_sensor_height','temperature_quality','humidity','humidity_sensor_height','humidity_quality','vector_wind_spd','vector_wind_dir','scalar_wind_spd','max_wind_spd','wind_sensor_height','wind_sensor_quality','sw_irradiance','sw_irradiance_sensor_height','sw_irradiance_quality','lw_irradiance','pir_thermopile_voltage','pir_case_temp','pir_dome_temp','pir_sensor_height','checksum'] # SCS style
 PROC_COLS = ['date_time','air_pres','air_temp','humidity','vector_wind_spd','vector_wind_dir']
 
 ROUNDING = {
@@ -77,8 +77,8 @@ ROUNDING = {
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
+# DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class MetParser(OpenVDMCSVParser):
@@ -104,8 +104,8 @@ class MetParser(OpenVDMCSVParser):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = line['date_time'] # OpenRVDAS style
-                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        # date_time = line['date_time'] # OpenRVDAS style
+                        date_time = ' '.join([line['date'], line['time']]) # SCS style
 
                         air_pres = float(line['air_pres'])
                         air_temp = float(line['air_temp'])
@@ -234,7 +234,7 @@ class MetParser(OpenVDMCSVParser):
         self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
-        if self.openvdm is not None:
+        if self.openvdm is not None and len(errors) > 0:
             self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
 
 
