fixed logic to prevent false error messages

--- a/server/plugins/parsers/dpt_parser.py.dist
+++ b/server/plugins/parsers/dpt_parser.py.dist
@@ -212,8 +212,8 @@ class DPTParser(OpenVDMCSVParser):
         self.add_visualization_data(deepcopy(visualizerDataObj))
 
         # send message about errors encountered to OpenVDM
-        if self.openvdm is not None:
-            self.openvdm.sendMsg('Parsing ', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
+        if self.openvdm is not None and len(errors) > 0:
+            self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
 
 
 # -------------------------------------------------------------------------------------
