--- a/server/plugins/parsers/vtg_parser.py.dist
+++ b/server/plugins/parsers/vtg_parser.py.dist
@@ -270,7 +270,7 @@ class VTGParser(OpenVDMCSVParser):
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None and len(errors) > 0:
-            self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join(errors)))
+            self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
 
 
 # -------------------------------------------------------------------------------------
