--- a/.pylintrc
+++ b/.pylintrc
@@ -143,7 +143,8 @@ disable=print-statement,
         line-too-long,
         wrong-import-position,
         too-many-lines,
-        too-many-public-methods
+        too-many-public-methods,
+        duplicate-code
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
